scooter/tests/snapshots/app_runner__test_update_search_results_invalid_regex__error_with_advanced_regex.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot
---
                                     Scooter                                    
    ┌Search text (Error: Couldn't parse regex)─────────────────────────────┐    
    │[invalid regex                                                        │    
    └──────────────────────────────────────────────────────────────────────┘    
    ┌Replace text──────────────────────────────────────────────────────────┐    
    │replacement                                                           │    
    └──────────────────────────────────────────────────────────────────────┘    
    ┌───┐                                                                       
    │   │ Fixed strings                                                         
    └───┘                                                                       
    ┌───┐ ┌──────────────────────────Errors──────────────────────────┐          
    │   │ │ Search text                                              │          
    └───┘ │ Parsing error at position 14: Invalid character class    │          
    ┌───┐ └──────────────────────────────────────────────────────────┘          
    │ X │ Match case                                                            
    └───┘                                                                       
    ┌Files to include──────────────────────────────────────────────────────┐    
    │                                                                      │    
    └──────────────────────────────────────────────────────────────────────┘    
    ┌Files to exclude──────────────────────────────────────────────────────┐    
    │                                                                      │    
    └──────────────────────────────────────────────────────────────────────┘    
                                                                                
<enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <esc> cl
